# context-engineering-pipeline

./: README.md  context_engineering_notebook.ipynb  pyproject.toml
vector_db/semantic_memory.lance/_transactions/: 0-4e1ce189-d92b-4c82-9ecc-c4ca8007693a.txn  1-95982379-3806-4819-b804-b1ac18f4756a.txn
vector_db/semantic_memory.lance/_versions/: 1.manifest  2.manifest
